add index file in root dir

--- a/tutorial/sample5/index.html
+++ b/tutorial/sample5/index.html
@@ -7,7 +7,9 @@
   </head>
 
   <body>
-    <canvas id="glcanvas" width="640" height="480"></canvas>
+    <div class='canvas-box'>
+    <canvas id="glcanvas" width="600" height="600"></canvas>
+	</div>
   </body>
 
   <script src="../gl-matrix.js"></script>
