modify index file

--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
    <ul>
    <li>
    
-   <a href='./tutorial/sample1/index.html'>tutorial/sample1/index.html</a></br>
+   <a href='./webgl/sample1/index.html'>webgl/sample1/index.html</a></br>
    </li>
    <li>
-   <a href='./tutorial/sample2/index.html'>tutorial/sample2/index.html</a></br>
+   <a href='./webgl/sample2/index.html'>webgl/sample2/index.html</a></br>
    </li>
    <li>
-   <a href='./tutorial/sample3/index.html'>tutorial/sample3/index.html</a></br>
+   <a href='./webgl/sample3/index.html'>webgl/sample3/index.html</a></br>
    </li>
    <li>
-   <a href='./tutorial/sample4/index.html'>tutorial/sample4/index.html</a></br>
+   <a href='./webgl/sample4/index.html'>webgl/sample4/index.html</a></br>
    </li>
    <li>
-   <a href='./tutorial/sample5/index.html'>tutorial/sample5/index.html</a></br>
+   <a href='./webgl/sample5/index.html'>webgl/sample5/index.html</a></br>
    </li>
    <li>
-   <a href='./tutorial/sample6/index.html'>tutorial/sample6/index.html</a></br>
+   <a href='./webgl/sample6/index.html'>webgl/sample6/index.html</a></br>
    </li>
    <li>
-   <a href='./tutorial/sample7/index.html'>tutorial/sample7/index.html</a></br>
+   <a href='./webgl/sample7/index.html'>webgl/sample7/index.html</a></br>
    </li>
    <li>
-   <a href='./tutorial/sample8/index.html'>tutorial/sample8/index.html</a></br>
+   <a href='./webgl/sample8/index.html'>webgl/sample8/index.html</a></br>
    </li>
    </ul>
    
